--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "co": "^4.6.0",
+    "co-mysql": "^1.0.0",
     "debug": "^2.2.0",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
@@ -16,6 +17,9 @@
     "koa-onerror": "^1.2.1",
     "koa-router": "^5.3.0",
     "koa-static": "^1.5.2",
-    "koa-views": "^3.1.0"
+    "koa-views": "^3.1.0",
+    "mysql2": "*",
+    "promisify-node": "^0.3.0",
+    "thunkify-wrap": "^1.0.4"
   }
 }
